5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1637_2447.log
== TEST (2019-04-08 15:19:50) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + round(troco, 2)
else:
	v = "Troco de " + troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + round(troco, 2)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:15) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + round(troco, 2)
else:
	v = "Troco de " + round(troco, 2)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + round(troco, 2)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:51) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + round(troco, 2)
else:
	v = "Troco de " + round(troco, 2)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + round(troco, 2)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:54) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + troco, 2
else:
	v = "Troco de " + troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + troco, 2
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:13) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + troco, 2
else:
	v = "Troco de " + troco
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + troco, 2
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:10) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + troco
else:
	v = "Troco de " + troco
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + troco
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:46) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco
if(preco > pagamento):
	v = "Falta " + (pagamento - preco)
else:
	v = "Troco de " + (pagamento - preco)
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "Falta " + (pagamento - preco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:09) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " + preco - pagamento
else:
	v = "Troco de " + preco - pagamento
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " + preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:02) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v =  preco - pagamento
else:
	v =  preco - pagamento
print(round(v, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:47) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v =  pagamento - preco
else:
	v =  pagamento - preco
print(round(v, 2))
-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:59) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v =  pagamento - preco
else:
	v =  pagamento - preco
print(round(v, 2))
-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:22) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " pagamento - preco
else:
	v = "Troco de " pagamento - preco
print(round(v, 2))
-- ERROR:
File "XXXX", line 6
    v = "Falta " pagamento - preco
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:34) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  pagamento - preco
else:
	v = "Troco de " +  pagamento - preco
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " +  pagamento - preco
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:12) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  pagamento - preco
else:
	v = "Troco de " +  -(pagamento - preco)
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " +  pagamento - preco
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:36:34) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  2
else:
	v = "Troco de " +  -(pagamento - preco)
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " +  2
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:45) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  round(troco, 2)
else:
	v = "Troco de " +  round("-"troco, 2)
print(v)
-- ERROR:
File "XXXX", line 8
    v = "Troco de " +  round("-"troco, 2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:58) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  round(troco, 2)
else:
	v = "Troco de " +  round(troco, 2)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " +  round(troco, 2)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:25) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(preco > pagamento):
	v = "Falta " +  troco
else:
	v = "Troco de " +  troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " +  troco
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:17:14) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento - preco >= preco):
	v = "Falta " +  troco
else:
	v = "Troco de " +  troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v = "Troco de " +  troco
NameError: name 'troco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:17:20) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento - preco >= preco):
	v = "Falta " +  troco
else:
	v = "Troco de " +  troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v = "Troco de " +  troco
NameError: name 'troco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:24) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento - preco >= preco):
	v = "Falta troco " 
else:
	v = "Troco de " pagamento - preco
print(v)
-- ERROR:
File "XXXX", line 8
    v = "Troco de " pagamento - preco
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:41) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento - preco >= preco):
	v = "Falta troco " 
else:
	v = "Troco de " + pagamento - preco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v = "Troco de " + pagamento - preco
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:28) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(troco < pagamento):
	v = "Falta " + troco 
else:
	v = "Troco de " + troco
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = "Falta " + troco 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:24) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(troco < pagamento):
	print ("Falta "  round(troco, 2)) 
else:
	print("Troco de" round(troco, 2))

-- ERROR:
File "XXXX", line 6
    print ("Falta "  round(troco, 2)) 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:34) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
troco = pagamento - preco

if(troco < pagamento):
	print ("Falta " + round(troco, 2)) 
else:
	print("Troco de" + round(troco, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ("Falta " + round(troco, 2)) 
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:34) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento < preco):
	x = preco - pagamento 
	print("Falta " , round(x,2))
else:
	y = pagamento - preco
	print("Troco de ", round(y,2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:49) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento < preco):
	x = preco - pagamento 
	print("Falta " , round(x,2))
else:
	y = pagamento - preco
	print("Troco de ", round(y,2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:30:59) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
#troco = pagamento - preco

if(pagamento < preco):
	x = preco - pagamento 
	print("Falta " , round(x,2))
else:
	y = pagamento - preco
	print("Troco de ", round(y,2))
-- EXECUTION TIME:
0.148538
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
